<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.smartinnovationtechnology.qbg.ContactUsActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/arc_logo_dimen"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/screen_horizontal_margin"
        android:layout_marginRight="@dimen/screen_horizontal_margin"
        android:layout_marginTop="@dimen/screen_vertical_margin"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/umc_arc_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        android:overScrollMode="never">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableRow
                android:id="@+id/layout_cairo_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/apptheme_list_selector_holo_light"
                android:gravity="center"
                android:paddingBottom="@dimen/content_padding_vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_info_icon_dimen"
                    android:src="@drawable/address_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/company_text_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/emc_cairo_address"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:id="@+id/layout_cairo_phone1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/apptheme_list_selector_holo_light"
                android:gravity="center"
                android:paddingBottom="@dimen/content_padding_vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_info_icon_dimen"
                    android:src="@drawable/telephone_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/company_text_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/emc_cairo_phone1"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:id="@+id/layout_cairo_phone2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/apptheme_list_selector_holo_light"
                android:gravity="center"
                android:paddingBottom="@dimen/content_padding_vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_info_icon_dimen"
                    android:src="@drawable/telephone_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/company_text_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/emc_cairo_phone2"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:id="@+id/layout_cairo_fax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="@dimen/content_padding_vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_info_icon_dimen"
                    android:src="@drawable/fax_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/company_text_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/emc_cairo_fax"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:id="@+id/layout_cairo_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/apptheme_list_selector_holo_light"
                android:gravity="center"
                android:paddingBottom="@dimen/content_padding_vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_info_icon_dimen"
                    android:src="@drawable/mail_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/company_text_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/emc_cairo_mail"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:id="@+id/layout_alex_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/apptheme_list_selector_holo_light"
                android:gravity="center"
                android:paddingBottom="@dimen/content_padding_vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_info_icon_dimen"
                    android:src="@drawable/address_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/company_text_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/emc_alex_address"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:id="@+id/layout_alex_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/apptheme_list_selector_holo_light"
                android:gravity="center"
                android:paddingBottom="@dimen/content_padding_vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_info_icon_dimen"
                    android:src="@drawable/telephone_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/company_text_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/emc_alex_phone"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:id="@+id/layout_alex_fax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="@dimen/content_padding_vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_info_icon_dimen"
                    android:src="@drawable/fax_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/company_text_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/emc_alex_fax"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:id="@+id/layout_alex_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/apptheme_list_selector_holo_light"
                android:gravity="center"
                android:paddingBottom="@dimen/content_padding_vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_info_icon_dimen"
                    android:src="@drawable/mail_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/company_text_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/emc_alex_mail"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text_medium" />
            </TableRow>

            <TableRow
                android:id="@+id/layout_webSite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/apptheme_list_selector_holo_light"
                android:gravity="center"
                android:paddingBottom="@dimen/content_padding_vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingTop="@dimen/content_padding_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/company_info_icon_dimen"
                    android:src="@drawable/website_icon" />

                <TextView
                    android:id="@+id/text_webSite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/company_text_margin"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/website"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_medium" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>
