<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/morning">

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="@dimen/actionbar_icon_dimen"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/clickable_item"
            android:paddingLeft="@dimen/actionbar_icon_padding"
            android:paddingRight="@dimen/actionbar_icon_padding"
            android:scaleType="centerInside"
            android:scaleX="-1"
            android:src="@drawable/ic_back_red" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/services"
            android:textColor="@color/dark_red"
            android:textSize="@dimen/title_dimen" />

        <ImageButton
            android:id="@+id/button_openSearch"
            android:layout_width="@dimen/actionbar_icon_dimen"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/clickable_item"
            android:paddingLeft="@dimen/actionbar_icon_padding"
            android:paddingRight="@dimen/actionbar_icon_padding"
            android:scaleType="centerInside"
            android:src="@drawable/ic_search_red"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_welcome"
            style="@style/TextViewShadow"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/welcome_text_margin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/good_morning"
            android:textColor="@color/white"
            android:textSize="@dimen/welcome_text_size"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_bar_vertical_margin"
            android:layout_marginLeft="@dimen/search_bar_horizontal_margin"
            android:layout_marginRight="@dimen/search_bar_horizontal_margin"
            android:layout_marginTop="@dimen/search_bar_vertical_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_searchServices"
                android:layout_width="@dimen/search_red_icon_dimen"
                android:layout_height="@dimen/search_red_icon_dimen"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/search_icon_red" />

            <EditText
                android:id="@+id/text_searchServices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxLines="1"
                android:minWidth="@dimen/text_field_min_width"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_pattern_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/abc_action_bar_default_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="@dimen/services_categories_title_margin"
                android:text="@string/quick_search"
                android:textColor="@color/white"
                android:textSize="@dimen/title_dimen" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_red2"></View>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_services_categories"
                android:layout_width="match_parent"
                android:layout_height="@dimen/services_categories_height"
                android:scrollbars="horizontal" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>